samples/_failures_safe/1761464582_fb8c7a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26c2471d.c: In function ‘main’:
./samples/SAFE/__tmp_26c2471d.c:139:9: error: expected declaration or statement at end of input
  139 |         printf("Memory allocation failed\n");
      |         ^~~~~~
./samples/SAFE/__tmp_26c2471d.c:139:9: error: expected declaration or statement at end of input
